# blog-web

./: .flaskenv  Dockerfile  README.md  docker-compose.yml  pyproject.toml
migrations/versions/: 9efb0a08786b_initial_migration.py
src/blog_web/: __init__.py  app.py  auth.py  config.py  error.py  models.py
src/blog_web/templates/: contact.html  home.html  index.html
