[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "blog-web"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "U.N. Owen", email = "void@some.where" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/U.N. Owen/blog-web#readme"
Issues = "https://github.com/U.N. Owen/blog-web/issues"
Source = "https://github.com/U.N. Owen/blog-web"

[tool.hatch.version]
path = "src/blog_web/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/blog_web tests}"

[tool.coverage.run]
source_pkgs = ["blog_web", "tests"]
branch = true
parallel = true
omit = [
  "src/blog_web/__about__.py",
]

[tool.coverage.paths]
blog_web = ["src/blog_web", "*/blog-web/src/blog_web"]
tests = ["tests", "*/blog-web/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
