[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "blog-web"
dynamic = ["version"]
description = 'Personal Project'
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = []
authors = [
  { name = "Deepak Sanjay S J", email = "sjanakisuresh@gmail.com" },
]
classifiers = [
  "Programming Language :: Python",
]
dependencies = [
"Flask",
"python-dotenv",
"Flask-SQLAlchemy",
"psycopg2",
"Flask-Migrate"
]

[project.urls]
Source = "https://github.com/DeepakSan/blog-web"

[tool.hatch.version]
path = "src/blog_web/__about__.py"

[tool.hatch.envs.dev]
dependencies = []

[tool.hatch.envs.dev.scripts]
build = "flask run"

[tool.coverage.run]
source_pkgs = ["blog_web", "tests"]
branch = true
parallel = true
omit = [
  "src/blog_web/__about__.py",
]

[tool.coverage.paths]
blog_web = ["src/blog_web", "*/blog-web/src/blog_web"]
tests = ["tests", "*/blog-web/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
